# memguard_core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/flagodna/memguard/: DebugPrint.kt  MemGuardPlugin.kt
example/: README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_config_subset  package_graph.json
example/.dart_tool/extension_discovery/: vs_code.json
example/lib/: main.dart
lib/: memguard_core.dart
rust/: Cargo.toml  build.rs  build.sh  build_linux.sh  build_macos.sh
rust/src/: android.rs  ios.rs  lib.rs
src/: memguard_core.dart
test/: memguard_core_test.dart
