[package]
name = "memguard_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "memguard_ffi"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = { version = "0.10", features = ["getrandom", "std"] }
aead = "0.5"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
hex = "0.4"
blake3 = "1.4"
once_cell = "1.19"
env_logger = "0.11"
jni = { version = "0.21", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0